update README: add instructions about how to avoid OOM exception